// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<Default__StyledSpan>
  <Sidebar.Header
    className=""
    key=".0"
  >
    <div />
  </Sidebar.Header>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with className and other props 1`] = `
<Default__StyledSpan>
  <Sidebar.Header
    className="my-class"
    key=".0"
    oneProp={1}
    twoProp={2}
  >
    <div />
  </Sidebar.Header>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with other props 1`] = `
<Default__StyledSpan>
  <Sidebar.Header
    className=""
    key=".0"
    oneProp={1}
    twoProp={2}
  >
    <div />
  </Sidebar.Header>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with the className prop 1`] = `
<Default__StyledSpan>
  <Sidebar.Header
    className="my-class"
    key=".0"
  >
    <div />
  </Sidebar.Header>
</Default__StyledSpan>
`;
